crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-duckdb-view_union_all_join-text_search_megascience_vector_search_sql_basic_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
Could not prepare EXPLAIN plan. SQL error: "HTTP error: 400 Bad Request - Failed to execute query: Error during planning: Table 'spice.public.qs' does not have an embedding index."
