crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-duckdb-view_union_all_join-vector_search_metadata_megascience_vector_search_sql_filtered_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer, 4) WHERE subject != 'math' ORDER BY _score DESC, id"
---
"HTTP error: 400 Bad Request - Arrow error: Invalid argument error: column types must match schema types, expected FixedSizeList(64 x Float32) but found FixedSizeList(64 x Float32, field: '') at column index 1"
