crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-no_vector_engine-dataset-hybrid_multiple_column_megascience_vector_search_sql_filtered_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer) WHERE subject != 'math' ORDER BY _score DESC, id LIMIT 4"
---
"HTTP error: 400 Bad Request - Failed to execute query: Error during planning: User function 'vector_search' is called on table 'spice.public.qs' that does not have a embedding index on 'answer' column. Index is on column(s): question"
