crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-no_vector_engine-dataset-hybrid_multiple_column_megascience_vector_search_sql_no_score_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer FROM vector_search(qs, 'second', answer) order by score desc, id LIMIT 4"
snapshot_kind: text
---
Could not prepare EXPLAIN plan. SQL error: "HTTP error: 400 Bad Request - Failed to execute query: Internal error: User function 'vector_search' is called on table 'spice.public.qs' that does not have a embedding index on 'answer' column. Index is on column(s): question..\nThis issue was likely caused by a bug in DataFusion's code. Please help us to resolve this by filing a bug report in our issue tracker: https://github.com/apache/datafusion/issues"
